# newsroom

./: ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  README.md  product-editorial-charter.zh-HK.md  pyproject.toml
.github/: b2-hardening.patch  b3-active-promotion-good.patch.gz.b64  b3-active-promotion.patch  b3-authority.patch.gz.b64  b3-rebuild-unit.patch.gz.b64
.github/a2b-apply/: part00.b64  part01.b64  patch00  patch01  patch02  patch03  patch04  patch05  patch06  patch07  patch08  patch09  patch10  patch11  patch12  patch13  patch14  (+7 more)
.sdlc/: add-b3-tombstone-projection-v2.py  add-b3-tombstone-projection.py  apply-shadow-decision-review.py  apply-shadow-decision-runner-env.py  apply-shadow-decision-semantics.py  apply-workflow-lane-topology.py  b3-active-nonworkflow.patch.gz.b64  b3-active-revalidation.patch  b3-promotion-reconcile.patch  b3-read-selection.patch  b3-reconcile-export-run.txt  b3-reconcile-source.sha256  b3-reconcile-source.tar.gz.b64  b3-reconciliation-diagnostic.txt  b3-reconciliation.patch.gz.b64  b3-tombstone-source-qualifier.trigger  cache-telemetry-review-fix.py  cache-telemetry-transform.py  credential-publication-diagnostic.txt  credential-transform-diagnostic.txt  evidence.schema.json  fix-b3-sdlc-service-topology.py  fix-b3-tombstone-v2-output-2.py  fix-b3-tombstone-v2-output-3.py  fix-b3-tombstone-v2-output-4.py  fix-b3-tombstone-v2-output.py  fix-shadow-junit-path.py  fix-shadow-venv-execution.py  fix-shadow-venv-execution.trigger  gates.toml  harden-shadow-admin-file.py  harden-shadow-credential-scope.py  harden-shadow-credential-scope.trigger  increment-1c-migration-wiring.patch  lane-hardening.part-00  lane-hardening.part-01  lane-hardening.part-02  lane-hardening.part-03  lane-hardening.part-04  lane-hardening.part-05  (+55 more)
docs/: README.md
newsroom/: README.md
scripts/: _cli.py  newsroom_editorial_shadow.py
(+525 files in other folders)
